* Thu Jan 21 7:45:00 CEST 1999

Fixed a memory leakage bug

* Mon Jan 11 18:40:00 CEST 1999

Made KPager store the "one click mode" and "show name" status

* Mon Jan  4 12:26:00 CEST 1999

Use kcmdisplayrc instead of kdisplayrc
Fix for common desktop change

* Wed Dic 30 7:50:00 CEST 1998

Fixed a problem with common background changing while it is set.

* Wed Dic 23 7:30:00 CEST 1998

Fixed the last problem (tm) with kbgndwm config readings

* Sun Dic 20 14:20:00 CEST 1998

Fixed a problem : When the common background changed, 
kpager didn't noticed if changing from wallpaper to a non-wallpaper mode.  

* Sat Dic 19 14:40:00 CEST 1998

Added some pedantic (though needed) comparisons . This made kpager
core dumps (reported by W.L. IJzerman)

* Fri Dic 18 7:50:00 CEST 1998

Fixed a bug that displayed junk in some circunstances in the 
Desktop Name area when not showing names.

* Thu Dic 17 7:48:00 CEST 1998

Another fix for common desktop
(this kbgwm_change event was really kbgwm_reconfigure)

* Tue Dic 15 7:20:00 CEST 1998

Oops, I thought this common desktop was already fixed. 
I hope now it is.

* Sat Dic 12 14:50:00 CEST 1998

Doing a workaround for resizing window bug

* Fri Dic 11 7:20:00 CEST 1998

Fixed CTRL-Q when menubar was hidden
Added left/right arrow movement
Now it's possible to hide desktop names

* Thu Dic 10 7:20:00 CEST 1998

Added sgml documentation

1998-12-07  Alex Zepeda  <garbanzo@hooked.net>

	* Removed unused variable.

* Fri Dic  4 7:20:00 CEST 1998

Finally implemented support for all the kbgndwm background modes
Some code beautified.
Raised version number to 0.9


* Wed Dic  2 7:23:00 CEST 1998

Many speed improvements, including reducing initialization
time (in some cases from 17 secs to 4 secs :) )
Some bug fixes which made kpager core dump in different
ways (really nobody noticed this ?)

* Tue Dic  1 7:23:00 CEST 1998

Improved speed when updating background pictures (thanks Matt for the new signal !)